@@ -124,12 +124,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_proxy_fcgi: Fix 2.4.23 breakage for mod_rewrite per-dir and query 
-     string showing up in SCRIPT_FILENAME. PR59815
-     trunk patch:  http://svn.apache.org/r1751970
-     2.4.x patch: trunk works + CHANGES
-     +1 covener, elukey, jim
-
   *) mod_proxy_fdpass: enable at build level 'most', restores compatibility
      with common httpd 2.4 rpm.spec descriptors.
      trunk patch: http://svn.apache.org/r1753224
